<resources>
    <string name="app_name">N8\'s Udactiy App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="portfolio_header_text">Please select an app to launch</string>
    <string name="button_spotify">Spotify Streamer</string>
    <string name="button_scores">Scores App</string>
    <string name="button_library">Library App</string>
    <string name="button_buildit">Build it Bigger</string>
    <string name="button_xyz">XYZ Reader</string>
    <string name="button_myapp">My Own App</string>
</resources>
